# rmf_camera_vlm_demo

demo_camera_world/: CMakeLists.txt  package.xml
demo_camera_world/launch/: office.launch.xml
demo_camera_world/maps/: office.building.yaml
demo_camera_world/template/: base.sdf
sensor_move_gz/: CMakeLists.txt  package.xml
sensor_move_gz/example_world/: example.sdf
sensor_move_gz/src/: random_camera_poser.cpp
spawn_camera_gz/: CMakeLists.txt  package.xml
spawn_camera_gz/launch/: spawn_camera_gz.py
spawn_camera_gz/models/: 2d_lidar.sdf  camera.sdf  semantic_camera.sdf
